5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4175/executions/1582_1334.log
== TEST (2019-03-12 23:58:53) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", )

print("Divisao: ", 40 / 20)

print("Resto: ", 2)

print("Potenciacao: ", ...)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao: 
Divisao:  2.0
Resto:  2
Potenciacao:  Ellipsis
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 00:00:05) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", )

print("Divisao: ", 56 / 7)

print("Resto: ", 8)

print("Potenciacao: ", 4²)
-- ERROR:
File "XXXX", line 11
    print("Potenciacao: ", 4²)
                            ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 00:01:29) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 4 * 2 )

print("Divisao: ", 56 / 7)

print("Resto: ", 8)

print("Potenciacao: ", 4 ** 2)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  16
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 00:03:28) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 4 * 2 )

print("Divisao: ", 56 / 7)

print("Resto: ", 8)

print("Potenciacao: ", 2.82842712474619 ** 2)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  7.999999999999998
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 00:03:40) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 4 * 2 )

print("Divisao: ", 56 / 7)

print("Resto: ", 8)

print("Potenciacao: ", 2 ** 3)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 00:03:48) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 4 * 2 )

print("Divisao: ", 56 / 7)

print("Resto: ", 8)

print("Potenciacao: ", 2 ** 3)
-- EXECUTION TIME:
0.127978
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 01:47:22) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 4 * 2 )

print("Divisao: ", 56 / 7)

rint("Resto: ", 8)

print("Potenciacao: ", 2 ** 3)
-- EXECUTION TIME:
0.152505
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/1334/main.py", line 9, in <module>
    rint("Resto: ", 8)
NameError: name 'rint' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 01:47:24) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 4 * 2 )

print("Divisao: ", 56 / 7)

print("Resto: ", 8)

print("Potenciacao: ", 2 ** 3)
-- EXECUTION TIME:
0.19072
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 01:47:56) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 4 * 2 )

print("Divisao: ", 56 / 7)

print("Resto: ", 8)

print("Potenciacao: ", 2 ** 3)
-- EXECUTION TIME:
0.118022
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 01:47:59) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 4 * 2 )

print("Divisao: ", 56 / 7)

rint("Resto: ", 8)

print("Potenciacao: ", 2 ** 3)
-- EXECUTION TIME:
0.152981
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/1334/main.py", line 9, in <module>
    rint("Resto: ", 8)
NameError: name 'rint' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 01:48:00) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 4 * 2 )

print("Divisao: ", 56 / 7)

orint("Resto: ", 8)

print("Potenciacao: ", 2 ** 3)
-- EXECUTION TIME:
0.148168
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/1334/main.py", line 9, in <module>
    orint("Resto: ", 8)
NameError: name 'orint' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 01:48:03) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 4 * 2 )

print("Divisao: ", 56 / 7)

print("Resto: ", 8)

print("Potenciacao: ", 2 ** 3)
-- EXECUTION TIME:
0.165076
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 01:48:26) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 4 * 2 )

print("Divisao: ", 56 / 7)

print("Resto: ", 8)

print("Potenciacao: ", 2 ** 3
-- EXECUTION TIME:
0.149699
-- ERROR:
  File "/home/codebench/codes/1582/1334/main.py", line 12
    
                                 ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 01:48:27) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 4 * 2 )

print("Divisao: ", 56 / 7)

print("Resto: ", 8)

print("Potenciacao: ", 2 ** 3)
-- EXECUTION TIME:
0.251114
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 01:49:01) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 4 * 2 )

print("Divisao: ", 56 / 7)

print("Resto: ", 8)

print("Potenciacao: ", 2 ** 3
-- EXECUTION TIME:
0.151217
-- ERROR:
  File "/home/codebench/codes/1582/1334/main.py", line 12
    
                                 ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 01:49:02) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 4 * 2 )

print("Divisao: ", 56 / 7)

print("Resto: ", 8)

print("Potenciacao: ", 2 ** 3)
-- EXECUTION TIME:
0.115496
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 01:49:38) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 4 * 2 )

print("Divisao: ", 56 / 7)

print("Resto: ", 8)

print("Potenciacao: ", 2 ** 3
-- EXECUTION TIME:
0.149577
-- ERROR:
  File "/home/codebench/codes/1582/1334/main.py", line 12
    
                                 ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 01:49:39) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 4 * 2 )

print("Divisao: ", 56 / 7)

print("Resto: ", 8)

print("Potenciacao: ", 2 ** 3)
-- EXECUTION TIME:
0.19456
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 01:50:30) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 4 * 2 )

print("Divisao: ", 56 / 7)

print("Resto: ", 8)

print("Potenciacao: ", 2 ** 3
-- EXECUTION TIME:
0.166455
-- ERROR:
  File "/home/codebench/codes/1582/1334/main.py", line 12
    
                                 ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 01:50:31) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 4 * 2 )

print("Divisao: ", 56 / 7)

print("Resto: ", 8)

print("Potenciacao: ", 2 ** 3)
-- EXECUTION TIME:
0.150428
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 01:50:50) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 4 * 2 )

print("Divisao: ", 56 / 7)

print("Resto: ", 8)

print("Potenciacao: ", 2 ** 3
-- EXECUTION TIME:
0.134105
-- ERROR:
  File "/home/codebench/codes/1582/1334/main.py", line 12
    
                                 ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 01:50:51) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 4 * 2 )

print("Divisao: ", 56 / 7)

print("Resto: ", 8)

print("Potenciacao: ", 2 ** 3)
-- EXECUTION TIME:
0.12302
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 01:51:05) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 4 * 2 )

print("Divisao: ", 56 / 7)

print("Resto: ", 8)

print("Potenciacao: ", 2 ** 3
-- EXECUTION TIME:
0.11651
-- ERROR:
  File "/home/codebench/codes/1582/1334/main.py", line 12
    
                                 ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 01:51:06) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 4 * 2 )

print("Divisao: ", 56 / 7)

print("Resto: ", 8)

print("Potenciacao: ", 2 ** 3)
-- EXECUTION TIME:
0.122084
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 01:51:21) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 4 * 2 )

print("Divisao: ", 56 / 7)

print("Resto: ", 8)

print("Potenciacao: ", 2 ** 3
-- EXECUTION TIME:
0.139095
-- ERROR:
  File "/home/codebench/codes/1582/1334/main.py", line 12
    
                                 ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 01:51:22) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 4 * 2 )

print("Divisao: ", 56 / 7)

print("Resto: ", 8)

print("Potenciacao: ", 2 ** 3)
-- EXECUTION TIME:
0.132485
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 01:51:50) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 4 * 2 )

print("Divisao: ", 56 / 7)

print("Resto: ", 8)

print("Potenciacao: ", 2 ** 3
-- EXECUTION TIME:
0.125068
-- ERROR:
  File "/home/codebench/codes/1582/1334/main.py", line 12
    
                                 ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 01:51:51) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 4 * 2 )

print("Divisao: ", 56 / 7)

print("Resto: ", 8)

print("Potenciacao: ", 2 ** 3)
-- EXECUTION TIME:
0.12502
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 01:52:31) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 4 * 2 )

print("Divisao: ", 56 / 7)

print("Resto: ", 8)

print("Potenciacao: ", 2 ** 3
-- EXECUTION TIME:
0.138211
-- ERROR:
  File "/home/codebench/codes/1582/1334/main.py", line 12
    
                                 ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-16 01:52:32) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 4 * 2 )

print("Divisao: ", 56 / 7)

print("Resto: ", 8)

print("Potenciacao: ", 2 ** 3)
-- EXECUTION TIME:
0.161997
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
